# icat

./: LICENSE  README.md  demo.py  icat.py  pyproject.toml  requirements.txt
demo_ssl_and_clustering/: README.md  cluster_utils.py  step_0_specify_dataset.py  step_1_train_byol.py  step_1_train_simclr.py  step_2_cluster.py  utils.py
demo_ssl_and_clustering/from_sthalles_github/: README.md
demo_ssl_and_clustering/from_sthalles_github/PyTorch_BYOL/: trainer.py  utils.py
demo_ssl_and_clustering/from_sthalles_github/PyTorch_BYOL/config/: config.yaml
demo_ssl_and_clustering/from_sthalles_github/PyTorch_BYOL/models/: resnet_base_network.py
demo_ssl_and_clustering/from_sthalles_github/SimCLR/: simclr.py
demo_ssl_and_clustering/from_sthalles_github/SimCLR/models/: resnet_simclr.py
icat/: __init__.py  __main__.py  view.py
icat/res/: empty.js
res/: select_lasso.js
src/: data.py  utils.py  view.py
