[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "icat"
version = "0.1.0"
description = "Image Cluster Annotation Tool"
authors = [{name = "Anders U. Waldeland"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dash==2.4.1",
    "dash-extensions==0.0.71",
    "Flask==2.0.3",
    "numpy==1.19.5",
    "ipywidgets==7.7.0",
]

[project.scripts]
icat = "icat.__main__:main"

[tool.setuptools.package-data]
icat = ["res/*"]
