[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "icat"
version = "0.1.0"
description = "Image Cluster Annotation Tool"
authors = [{name = "Anders U. Waldeland"}]
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "dash>=3.0.1",
    "dash-extensions>=1.0.20",
    "Flask>=3.0.3",
    "numpy>=2.2.4",
    "ipywidgets>=8.1.5",
    "Pillow>=10.0.0",
    "anywidget>=0.9.18",
    "tzdata>=2025.2"
]
#Successfully installed Flask-3.0.3 Werkzeug-3.0.6 dash-3.0.4 ipywidgets-8.1.7 retrying-1.4.0 widgetsnbextension-4.0.14
[project.scripts]
icat = "icat.__main__:main"

[tool.setuptools.package-data]
icat = ["res/*"]

[tool.setuptools]
packages = ["icat"]
